forEnersys/nthing Salesforce CPQ/objects/CustomScript__c.object
<CustomObject>
    <description>Script that can be executed by an outside resource</description>
    <fields>
        <fullName>AccountFields__c</fullName>
        <description>Fields on the Account object referenced by this plugin</description>
        <inlineHelpText>Enter the API names of any Account fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Account Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Script code</description>
        <inlineHelpText>Code that can be executed by an outside resource.</inlineHelpText>
        <label>Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupFields__c</fullName>
        <description>Fields on the QuoteLineGroup__c object referenced by this plugin</description>
        <inlineHelpText>Enter the API names of any Quote Line Group fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Quote Line Group Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityFields__c</fullName>
        <description>Fields on the Opportunity object referenced by this plugin</description>
        <inlineHelpText>Enter the API names of any Opportunity fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Opportunity Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductFields__c</fullName>
        <description>Fields on the Product object referenced by this plugin</description>
        <inlineHelpText>Enter the API names of any Product fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Product Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuoteFields__c</fullName>
        <description>Fields on the Quote__c object referenced by this plugin</description>
        <inlineHelpText>Enter the API names of any Quote fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Quote Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuoteLineFields__c</fullName>
        <description>QuoteLine__c fields referenced by the plugin</description>
        <inlineHelpText>Enter the API names of all Quote Line fields referenced by this plugin, one per line.</inlineHelpText>
        <label>Quote Line Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TranspiledCode__c</fullName>
        <description>Script Code transpiled to ES5</description>
        <label>Transpiled Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Custom Script</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>